--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
@@ -19,6 +20,7 @@
     "mongoose": "^8.5.4",
     "morgan": "~1.9.1",
     "nocache": "^4.0.0",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4"
   }
 }
